--- a/nuxt-unstyled-tailwind/assets/styles/base.css
+++ b/nuxt-unstyled-tailwind/assets/styles/base.css
@@ -46,7 +46,7 @@
 
 /* Dark */
 @media (prefers-color-scheme: dark) {
-    :root {
+    :root[class="app-dark"] {
         --p-primary-color: var(--p-primary-400);
         --p-primary-contrast-color: var(--p-surface-900);
         --p-primary-hover-color: var(--p-primary-300);
